--- a/src/meson.build
+++ b/src/meson.build
@@ -35,11 +35,27 @@ datman_sources = [
   'colorpicker.py',
   'main.py',
   'window.py',
+  'config.json',
   'samplerow.py',
+  'transform_data.py',
   'data.py',
-  'window.ui',
-  'sample_box.ui',
-  'se.sjoerd.DatMan-symbolic.svg'
+  'preferences.py',
+  'forwards-symbolic.svg',
+  'forwards-dark-symbolic.svg',
+  'backwards-symbolic.svg',
+  'backwards-dark-symbolic.svg',
+  'zoom-symbolic.svg',
+  'zoom-dark-symbolic.svg',
+  'save-symbolic.svg',
+  'save-dark-symbolic.svg',
+  'move-symbolic.svg',
+  'move-dark-symbolic.svg',
+  'home-symbolic.svg',
+  'home-dark-symbolic.svg',
+  'change-xscale-symbolic.svg',
+  'change-yscale-symbolic.svg',
+  'change-xscale-dark-symbolic.svg',
+  'change-yscale-dark-symbolic.svg',
 ]
 
 install_data(datman_sources, install_dir: moduledir)
