Info transformation work + flathub groundwork

--- a/src/meson.build
+++ b/src/meson.build
@@ -22,7 +22,7 @@ configure_file(
   output: 'datman',
   configuration: conf,
   install: true,
-  install_mode: 'rwxr--r--',
+  install_mode: 'rwxr-xr-x',
   install_dir: get_option('bindir')
 )
 
@@ -57,6 +57,7 @@ datman_sources = [
   'change-yscale-symbolic.svg',
   'change-xscale-dark-symbolic.svg',
   'change-yscale-dark-symbolic.svg',
+  'datman.in',
 ]
 
 install_data(datman_sources, install_dir: moduledir, install_mode: 'rwxrwxrwx')
