--- a/data/se.sjoerd.DatMan.appdata.xml.in
+++ b/data/se.sjoerd.DatMan.appdata.xml.in
@@ -9,18 +9,20 @@
   <description>
     <p>
       DatMan is a simple but powerful data manipulation tool developed with the Gnome environment in mind. It opens and plots two column data files
-      which then easily can be manipulated and transformed. The transformed data can be saved as .txt file for further use.
+      which then easily can be manipulated and transformed. Alternatively, data can be generated and plotted from an equation. The transformed data can be saved as .txt file for further use.
     </p>
     <p>
       DatMan can both be used as plotting tool, or as a data manipulation tool. There's an extensive number of options to change the plot layouts including,
       but not limited to the axis labels the used scaling on either axis, the length and width of the ticks used, the thickness of the lines, the linestyle,
       the fonts and more. The plots can be saved in multiple formats, including vector images for further work in e.g. Inkscape. The data manipulation tools
       include options like:
-      - Selecting and cutting part of the data
-      - Translating data
-      - Center data
-      - Smoothening of data
-      - Custom transformations using anything that is compatible with the numpy module
+      <ul>
+    <li>Selecting and cutting part of the data</li>
+    <li>Translating data</li>
+    <li>Centering data</li>
+    <li>Smoothening of data</li>
+    <li>Custom transformations using anything that is compatible with the numpy module</li>
+</ul>
     </p>
     <p>
       DatMan is still in very early development, and a large number of features are still planned. For any future requests or feedback, please file an issue or send
@@ -38,6 +40,12 @@
       <caption>GIScan settings</caption>
       <image>http://www.sjoerd.se/datman_main.png</image>
     </screenshot>
+   
+         <screenshot type="default">
+      <caption>GIScan settings</caption>
+      <image>http://www.sjoerd.se/datman_equations.png</image>
+    </screenshot>
+  </screenshots>
     
      <screenshot type="default">
       <caption>GIScan settings</caption>
@@ -46,7 +54,7 @@
   </screenshots>
 
     <releases>
-    <release version="1.0.0" date="2022-12-20">
+    <release version="1.0.0" date="2022-12-14">
       <description>
         <ul>
           <li>Initial release</li>
