--- a/data/se.sjoerd.DatMan.appdata.xml.in
+++ b/data/se.sjoerd.DatMan.appdata.xml.in
@@ -8,7 +8,7 @@
   <developer_name>Sjoerd Broekhuijsen</developer_name>
   <description>
     <p>
-      DatMan is a simple but powerful data manipulation tool developed with the Gnome environment in mind. It opens and plots two column data files
+      DatMan is a simple but powerful data manipulation tool developed using the modern libadwaita. It opens and plots two column data files
       which then easily can be manipulated and transformed. Alternatively, data can be generated and plotted from an equation. The transformed data can be saved as .txt file for further use.
     </p>
     <p>
