--- a/data/se.sjoerd.DatMan.appdata.xml.in
+++ b/data/se.sjoerd.DatMan.appdata.xml.in
@@ -3,7 +3,7 @@
   <id>se.sjoerd.DatMan</id>
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-3.0-or-later</project_license>
-  <name>DatMan</name>
+  <name>Data Manipulator</name>
   <summary>Plot and manipulate data in a breeze</summary>
   <developer_name>Sjoerd Broekhuijsen</developer_name>
   <description>
