--- a/data/se.sjoerd.DatMan.appdata.xml.in
+++ b/data/se.sjoerd.DatMan.appdata.xml.in
@@ -8,11 +8,11 @@
   <developer_name>Sjoerd Broekhuijsen</developer_name>
   <description>
     <p>
-      DatMan is a simple but powerful data manipulation tool developed using the modern libadwaita. It opens and plots two column data files
+      Data Manipulator is a simple but powerful data manipulation tool developed using the modern libadwaita. It opens and plots two column data files
       which then easily can be manipulated and transformed. Alternatively, data can be generated and plotted from an equation. The transformed data can be saved as .txt file for further use.
     </p>
     <p>
-      DatMan can both be used as plotting tool, or as a data manipulation tool. There's an extensive number of options to change the plot layouts including,
+      Data Manipulator can both be used as plotting tool, or as a data manipulation tool. There's an extensive number of options to change the plot layouts including,
       but not limited to the axis labels the used scaling on either axis, the length and width of the ticks used, the thickness of the lines, the linestyle,
       the fonts and more. The plots can be saved in multiple formats, including vector images for further work in e.g. Inkscape. The data manipulation tools
       include options like:
@@ -25,7 +25,7 @@
     <li>Custom transformations using anything that is compatible with the numpy module</li>
 </ul>
     <p>
-      DatMan is still in very early development, and a large number of features are still planned. For any future requests or feedback, please file an issue or send
+      Data Manipulator is still in very early development, and a large number of features are still planned. For any future requests or feedback, please file an issue or send
       me an email. 
     </p>
   </description>
