--- a/meson.build
+++ b/meson.build
@@ -1,4 +1,4 @@
-project('graphene',
+project('datman',
           version: '1.0.2',
     meson_version: '>= 0.59.0',
   default_options: [ 'warning_level=2', 'werror=false', ],
