--- a/data/se.sjoerd.DatMan.appdata.xml.in
+++ b/data/se.sjoerd.DatMan.appdata.xml.in
@@ -3,16 +3,16 @@
   <id>se.sjoerd.DatMan</id>
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-3.0-or-later</project_license>
-  <name>Graphene</name>
+  <name>Graphs</name>
   <summary>Plot and manipulate data in a breeze</summary>
   <developer_name>Sjoerd Broekhuijsen</developer_name>
   <description>
     <p>
-      Graphene is a simple but powerful data manipulation tool developed with the Gnome environment in mind. It opens and plots two-column data files
+      Graphs is a simple but powerful data manipulation tool developed with the Gnome environment in mind. It opens and plots two-column data files
       which then easily can be manipulated and transformed. Alternatively, data can be generated and plotted from an equation. The transformed data can be saved as .txt file for further use.
     </p>
     <p>
-      Graphene can both be used as plotting tool, or as a data manipulation tool. There's an extensive number of options to change the plot layouts including,
+      Graphs can both be used as plotting tool, or as a data manipulation tool. There's an extensive number of options to change the plot layouts including,
       but not limited to the axis labels, the prefered scaling on either axis, the length and width of the ticks used, the thickness of the lines, the linestyle,
       the fonts and more. The plots can be saved in multiple formats, including vector images for further editing in e.g. Inkscape. The data manipulation tools
       include options like:
@@ -25,7 +25,7 @@
     <li>Custom transformations using anything that is compatible with the numpy module</li>
 </ul>
     <p>
-      Graphene is still in very early development, and a large number of features are still planned. For any future requests or feedback, please file an issue on Github or send
+      Graphs is still in very early development, and a large number of features are still planned. For any future requests or feedback, please file an issue on Github or send
       me an email. 
     </p>
   </description>
