--- a/data/se.sjoerd.DatMan.desktop.in
+++ b/data/se.sjoerd.DatMan.desktop.in
@@ -4,5 +4,5 @@ Exec=datman
 Icon=se.sjoerd.DatMan
 Terminal=false
 Type=Application
-Categories=GTK;
+Categories=Education;Science
 StartupNotify=true
