--- a/src/meson.build
+++ b/src/meson.build
@@ -43,6 +43,9 @@ datman_sources = [
   'transform_data.py',
   'data.py',
   'preferences.py',
+  'plot_settings.py',
+  'utilities.py',
+  'pip_mode.py',
   'forwards-symbolic.svg',
   'forwards-dark-symbolic.svg',
   'backwards-symbolic.svg',
@@ -55,6 +58,10 @@ datman_sources = [
   'move-dark-symbolic.svg',
   'home-symbolic.svg',
   'home-dark-symbolic.svg',
+  'plot-settings-symbolic.svg',
+  'plot-settings-dark-symbolic.svg',
+  'pip-symbolic.svg',
+  'pip-dark-symbolic.svg',
   'change-xscale-symbolic.svg',
   'change-yscale-symbolic.svg',
   'change-xscale-dark-symbolic.svg',
