--- a/data/se.sjoerd.DatMan.appdata.xml.in
+++ b/data/se.sjoerd.DatMan.appdata.xml.in
@@ -8,24 +8,13 @@
   <developer_name>Sjoerd Broekhuijsen</developer_name>
   <description>
     <p>
-      Graphs is a simple but powerful data manipulation and graphing tool developed with the GNOME environment in mind. It opens and plots two-column data files
-      which then easily can be manipulated and transformed. Alternatively, data can be generated and plotted from an equation. The transformed data can be saved as .txt file for further use.
+  Graphs is a simple yet powerful tool that allows users to plot and manipulate their data in a breeze. With Graphs, you can open and plot two-column data files, or generate new data from an equation. Imported data, and data generated from an equation are treated the same, and both can be manipulated and saved as text files for future use. The plots can be customized to your liking with a wide range of options including axis labels, scaling, tick marks, line thickness and style, and fonts. Graphs also has a range of data manipulation tools, such as the ability to select, cut, translate, multiply, center, and smooth data, as well as apply any custom transformations using numpy notation.
     </p>
     <p>
-      Graphs can both be used as plotting tool, or as a data manipulation tool. There's an extensive number of options to change the plot layouts including,
-      but not limited to the axis labels, the preferred scaling on either axis, the length and width of the ticks used, the thickness of the lines, the linestyle,
-      the fonts and more. The plots can be saved in multiple formats, including vector images for further editing in e.g. Inkscape. The data manipulation tools
-      include options like:
+Graphs is an excellent fit both plotting and data manipulation. The plots created with Graphs can be saved in a variety of formats suitable for sharing and presenting to a wide audience, such as in a scientific publication or presentations. It is also possible to save the plots as vector images, which can be easily edited in programs like Inkscape for further customization and refinement. Graphs is written with the GNOME environment in mind, but should be suitable for any other desktop environment as well.
           </p>
-    <ul>
-      <li>Selecting and cutting part of the data</li>
-      <li>Translation and multiplication of data</li>
-      <li>Centering data</li>
-      <li>Smoothening data</li>
-      <li>Custom transformations using anything that is compatible with the numpy module</li>
-    </ul>
     <p>
-      Graphs is still in early development, and a large number of features are still planned. For any future requests or feedback, please file an issue on the Github page.
+      Graphs is still in early development, and a large number of features are still planned. For any feature requests or feedback, please file an issue on the Github page.
     </p>
   </description>
   <launchable type="desktop-id">se.sjoerd.DatMan.desktop</launchable>
@@ -53,7 +42,6 @@
   <releases>
       <release version="1.2.0" date="2022-12-21">
       <description>
-        <p>Now with the ability to change Axes settings without changing the default values, most major components are in and it's time to declare v1.2.0. Also added some QoL features, see changelog below:</p>
         <ul>
           <li>The "Plot Settings" button now also contains a tab to edit the axes properties</li>
           <li>The pop-up graph now follows the same scaling as the regular graph</li>
@@ -62,7 +50,7 @@
           <li>Pressing delete now deletes all selected data sets</li>
           <li>Changed the wording in "Transform Data" ui to be less confusing</li>
           <li>Tweaked the save icon a bit</li>
-          <li>Slightly edited README file</li>
+          <li>Updated Flathub description</li>
           <li>Made new screenshots for Flathub</li>
           <li>Changed the webpage to direct to the landing page of Graphs (under construction)</li>
         </ul>
