--- a/src/config.json
+++ b/src/config.json
@@ -4,7 +4,10 @@
 "savefig_filetype": "svg",
 "plot_Y_scale": "linear",
 "plot_X_scale": "linear",
+"plot_X_position": "bottom",
+"plot_Y_position": "left",
 "plot_X_label": "X Value",
+"plot_right_label": "",
 "plot_Y_label": "Y Value",
 "plot_selected_linestyle": "solid",
 "plot_unselected_linestyle": "solid",
