Update to Graphs 1.3.0

--- a/src/config.json
+++ b/src/config.json
@@ -1,45 +1,47 @@
-{"selected_linewidth": 3,
-"unselected_linewidth": 1,
-"savefig_transparent": true,
-"savefig_filetype": "svg",
+{"plot_font_string": "Cantarell 12", 
+"plot_selected_marker_size": 8.0, 
+"plot_unselected_marker_size": 8.0,
+"selected_linewidth": 3.0, 
+"unselected_linewidth": 1.0,
+"plot_major_tick_width": 1.0, 
+"plot_minor_tick_width": 0.5, 
+"plot_major_tick_length": 8.0, 
+"plot_minor_tick_length": 3.0, 
+"plot_tick_left": true, 
+"plot_tick_right": false, 
+"plot_tick_top": false, 
+"plot_tick_bottom": true,
+"plot_tick_direction": "in",
+"allow_duplicate_filenames": true,
+"savefig_transparent": true, 
+"plot_legend": true,
+"plot_invert_color_cycle_dark": false, 
+"plot_Y_label": "Y Value", 
+"plot_X_label": "X Value",
+"plot_right_label": "Y Value 2", 
+"plot_top_label": "X Value 2", 
+"plot_font_size": "12", 
+"plot_font_style": "normal", 
+"plot_font_weight": "normal",
+"plot_font_family": "Cantarell",
+"plot_title": "", 
+"savefig_filetype": "svg", 
+"plot_color_cycle": "tab10", 
+"plot_X_scale": "linear", 
 "plot_Y_scale": "linear",
-"plot_X_scale": "linear",
+"plot_top_scale": "linear", 
+"plot_right_scale": "linear",
 "plot_X_position": "bottom",
 "plot_Y_position": "left",
-"plot_X_label": "X Value",
-"plot_right_label": "",
-"plot_Y_label": "Y Value",
+"center_data": "Center at middle coordinate", 
 "plot_selected_linestyle": "solid",
-"plot_unselected_linestyle": "solid",
-"plot_unselected_markers": "none",
-"plot_selected_markers": "none",
-"plot_style_light": "seaborn-v0_8-whitegrid",
+"plot_unselected_linestyle": "solid", 
 "plot_style_dark": "dark_background",
-"plot_tick_direction": "in",
-"plot_major_tick_width": 1,
-"plot_minor_tick_width": 0.5,
-"plot_major_tick_length": 8,
-"plot_minor_tick_length": 3,
-"plot_legend": true,
-"plot_title": "",
-"plot_color_cycle": "tab10",
-"plot_invert_color_cycle_dark": false,
-"plot_unselected_marker_size": 8,
-"plot_selected_marker_size": 8,
-"plot_font_family": "Cantarell",
-"plot_font_size": 12,
-"plot_font_weight": "normal",
-"plot_font_style": "normal",
-"plot_font_string": "Cantarell 12",
-"plot_tick_left": true,
-"plot_tick_right": false,
-"plot_tick_bottom": true,
-"plot_tick_top": false,
-"center_data": "Center at middle coordinate",
-"allow_duplicate_filenames": true,
+"plot_style_light": "seaborn-v0_8-whitegrid",
 "import_column_x": 0,
-"import_column_y": 1,
-"import_skip_rows": 0,
+"import_column_y": 1, 
+"import_skip_rows": 0, 
 "import_separator": ".",
-"import_delimiter": "\\s+"
-}
+"import_delimiter": "\\s+", 
+"plot_unselected_markers": "none",
+"plot_selected_markers": "none"}
