--- a/data/se.sjoerd.DatMan.appdata.xml.in
+++ b/data/se.sjoerd.DatMan.appdata.xml.in
@@ -40,14 +40,16 @@ Graphs is an excellent fit both plotting and data manipulation. The plots create
     </screenshot>
   </screenshots>
   <releases>
-      <release version="1.2.2" date="2022-12-29">
+      <release version="1.3.0" date="2022-12-30">
       <description>
-        <p>Probably last update of the year, most noteworthy is the addition of the ability to plot data on the right-hand axis</p>
+        <p>Probably last update of the year, most noteworthy is the ability to plot data on right and bottom axis independently. Next few updates will probably mainly focus on polish and code clean-up.</p>
         <ul>
           <li>Added the option to plot data on the right-hand axis</li>
-          <li>Added an option for a label for the right-hand axis</li>
-          <li>Added toast pop-ups to give feedback for certain actions and errors</li>
-          <li>Linguistic changes</li>
+          <li>Added the option to plot data on the top axis</li>
+          <li>Added the ability to use different labels for right and top axis</li>
+          <li>Scaling of top-bottom and right-left is now handled independently</li>
+          <li>Added a series of toast pop-ups for common actions and errors</li>
+          <li>Made some linguistic changes</li>
         </ul>
         </description>
       </release>
